force-app/main/default/objects/Activity/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>Comma-separated email Ids</description>
    <inlineHelpText>Comma-separated email Ids</inlineHelpText>
    <label>Attendees (comma-separated emails)</label>
    <type>TextArea</type>
</CustomField>