force-app/main/default/objects/Activity/fields/Google_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Event_Id__c</fullName>
    <description>External Id used for updating google event when SF event is updated</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id used for updating google event when SF event is updated</inlineHelpText>
    <label>Google Event Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>