force-app/main/default/objects/Activity/fields/Google_Meet_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Meet_Link__c</fullName>
    <description>This field will auto-populate upon sync if the checkbox &quot;Send_Google_Meet_Link_to_Attendees__c&quot; is checked during event creation.</description>
    <inlineHelpText>This field will auto-populate upon sync if the checkbox &quot;Send_Google_Meet_Link_to_Attendees__c&quot; is checked during event creation.</inlineHelpText>
    <label>Google Meet Link</label>
    <type>Url</type>
</CustomField>