force-app/main/default/objects/Activity/fields/Google_Sync_Details__c.field-meta.xml
<CustomField>
    <fullName>Google_Sync_Details__c</fullName>
    <description>Stores error msg with timestamp in case of error and also the timestamp in case of success</description>
    <inlineHelpText>Stores error msg with timestamp in case of error and also the timestamp in case of success</inlineHelpText>
    <label>Google Sync Details</label>
    <type>TextArea</type>
</CustomField>