force-app/main/default/objects/Activity/fields/Google_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Google_Sync_Status__c</fullName>
    <label>Google Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>