force-app/main/default/objects/Activity/fields/JSON_Body2__c.field-meta.xml
<CustomField>
    <fullName>JSON_Body2__c</fullName>
    <inlineHelpText>continued body because Long text area field is not available</inlineHelpText>
    <label>JSON Body2</label>
    <type>TextArea</type>
</CustomField>