force-app/main/default/objects/Activity/fields/JSON_Body3__c.field-meta.xml
<CustomField>
    <fullName>JSON_Body3__c</fullName>
    <label>JSON Body3</label>
    <type>TextArea</type>
</CustomField>