force-app/main/default/objects/Activity/fields/JSON_Body4__c.field-meta.xml
<CustomField>
    <fullName>JSON_Body4__c</fullName>
    <label>JSON Body4</label>
    <type>TextArea</type>
</CustomField>