force-app/main/default/objects/Activity/fields/Send_Google_Meet_Link_to_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Send_Google_Meet_Link_to_Attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked an email will be sent automatically by google itself with a Google Meet link. Also the link will be stored in Google_Meet_Link__c field.</description>
    <inlineHelpText>If checked an email will be sent automatically by google itself with a Google Meet link. Also the link will be stored in Google_Meet_Link__c field.</inlineHelpText>
    <label>Send Google Meet Link to Attendees?</label>
    <type>Checkbox</type>
</CustomField>